dynamisation de l'affichage des tickets sur tableau de bord

--- a/FRONT/front_end/index.html
+++ b/FRONT/front_end/index.html
@@ -6,14 +6,11 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NOVA Lead</title>
-    <!-- Ajoute ceci dans la section <head> de ton index.html -->
-<script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
-
+    <!-- Inclusion du script jwt-decode une seule fois -->
+    <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
-
   </body>
 </html>
